--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -1,4 +1,10 @@
 <app-title title="Cart Page" margin="1.5rem 0 0 2.5rem"></app-title>
+<app-page-not-found
+  [visible]="!cart || !cart.items.length"
+  notFoundMessage = "Votre panier est vide "
+  resetLinkText="Aller à la page d'accueil "
+></app-page-not-found>
+
 
 <div *ngIf="cart && cart.items.length" class="container">
   <ul>
