--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -51,9 +51,15 @@
 
   <div class="btnWhtspp">
 
-    <a  [href]="'https://api.whatsapp.com/send?phone=' + +22676767624  " >
+    <a  [href]="'https://api.whatsapp.com/send?phone=' + '+23563917011' + '&text=' + 'http://localhost:4200/product/1'"
+    >
       Commander via whatsapp
     </a>
+
+    <!-- <button (click)="sendProductLink('+22676767624', 'http://localhost:4200/product/1')">
+      Partager sur WhatsApp
+    </button> -->
+
   </div>
 
 
