--- a/frontend/src/app/components/pages/product-page/product-page.component.html
+++ b/frontend/src/app/components/pages/product-page/product-page.component.html
@@ -5,7 +5,7 @@
 ></app-page-not-found>
 
 
-<div *ngIf="product.id" class="container">
+<div class="container">
   <img [src]="product.imageUrl" [alt]="product.name"/>
 
   <div class="details">
